<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:text="@string/register"
        android:textColor="@color/secondaryTextColor"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/rounded_register_and_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_password_register"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_password_register"
        app:layout_constraintTop_toBottomOf="@+id/textView_password_register"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/textView_username_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/username"
        android:textColor="@color/primaryTextColor"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView_email_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:textColor="@color/primaryTextColor"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_username_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_username_register"
        app:layout_constraintTop_toBottomOf="@+id/textView_username_register" />

    <TextView
        android:id="@+id/textView_existing_account"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <EditText
        android:id="@+id/textView_password_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="24sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/textView_email_register"
        app:layout_constraintStart_toStartOf="@+id/textView_email_register"
        app:layout_constraintTop_toBottomOf="@+id/textView_email_register" />

</androidx.constraintlayout.widget.ConstraintLayout>